package data

import (
	"context"
	"fmt"

	commonv1 "rag/api/common/v1"
	v1 "rag/api/gateway/v1"
	"rag/app/gateway/internal/biz"

	"github.com/go-kratos/kratos/v2/log"
)

// queryRepo implements biz.QueryRepo interface
type queryRepo struct {
	data *Data
	log  *log.Helper
}

// NewQueryRepo creates a new query repository
func NewQueryRepo(data *Data, logger log.Logger) biz.QueryRepo {
	return &queryRepo{
		data: data,
		log:  log.NewHelper(logger),
	}
}

// RetrieveDocuments calls orchestrator service to retrieve relevant documents
func (r *queryRepo) RetrieveDocuments(ctx context.Context, query string, params *v1.QueryParameters) ([]*biz.RelatedDocument, error) {
	r.log.WithContext(ctx).Infof("Retrieving documents for query: %s", query)

	// TODO: 调用 orchestrator 服务进行文档检索
	// 这里是模拟实现，实际应该通过 gRPC 调用 orchestrator 服务

	// 模拟返回一些相关文档
	documents := []*biz.RelatedDocument{
		{
			DocumentID:     "doc-1",
			Title:          "机器学习基础",
			Snippet:        "机器学习是人工智能的一个重要分支...",
			RelevanceScore: 0.95,
			DocumentType:   "pdf",
			Chunks: []*commonv1.ChunkInfo{
				{
					ChunkId:    "chunk-1-1",
					DocumentId: "doc-1",
					Content:    "机器学习基础知识介绍...",
					ChunkIndex: 1,
				},
			},
		},
		{
			DocumentID:     "doc-2",
			Title:          "深度学习实践",
			Snippet:        "深度学习是机器学习的一个子领域...",
			RelevanceScore: 0.88,
			DocumentType:   "pdf",
			Chunks: []*commonv1.ChunkInfo{
				{
					ChunkId:    "chunk-2-1",
					DocumentId: "doc-2",
					Content:    "深度学习网络结构...",
					ChunkIndex: 1,
				},
			},
		},
	}

	// 应用查询参数过滤
	if params != nil {
		// 限制返回结果数量
		if params.MaxResults > 0 && int32(len(documents)) > params.MaxResults {
			documents = documents[:params.MaxResults]
		}

		// 应用相似度阈值过滤
		if params.SimilarityThreshold > 0 {
			var filteredDocs []*biz.RelatedDocument
			for _, doc := range documents {
				if doc.RelevanceScore >= params.SimilarityThreshold {
					filteredDocs = append(filteredDocs, doc)
				}
			}
			documents = filteredDocs
		}

		// 应用文档类型过滤
		if len(params.DocumentTypes) > 0 {
			typeMap := make(map[string]bool)
			for _, docType := range params.DocumentTypes {
				typeMap[docType] = true
			}

			var filteredDocs []*biz.RelatedDocument
			for _, doc := range documents {
				if typeMap[doc.DocumentType] {
					filteredDocs = append(filteredDocs, doc)
				}
			}
			documents = filteredDocs
		}

		// 应用文档ID过滤
		if len(params.DocumentIds) > 0 {
			idMap := make(map[string]bool)
			for _, docID := range params.DocumentIds {
				idMap[docID] = true
			}

			var filteredDocs []*biz.RelatedDocument
			for _, doc := range documents {
				if idMap[doc.DocumentID] {
					filteredDocs = append(filteredDocs, doc)
				}
			}
			documents = filteredDocs
		}
	}

	r.log.WithContext(ctx).Infof("Retrieved %d documents", len(documents))
	return documents, nil
}

// RerankDocuments calls reranker service to optimize document order
func (r *queryRepo) RerankDocuments(ctx context.Context, query string, documents []*biz.RelatedDocument) ([]*biz.RelatedDocument, error) {
	r.log.WithContext(ctx).Infof("Reranking %d documents", len(documents))

	// TODO: 调用 reranker 服务进行文档重排序
	// 这里是模拟实现，实际应该通过 gRPC 调用 reranker 服务

	// 模拟重排序：简单地按相关性分数降序排列
	rerankedDocs := make([]*biz.RelatedDocument, len(documents))
	copy(rerankedDocs, documents)

	// 简单的冒泡排序按相关性分数降序
	for i := 0; i < len(rerankedDocs)-1; i++ {
		for j := 0; j < len(rerankedDocs)-i-1; j++ {
			if rerankedDocs[j].RelevanceScore < rerankedDocs[j+1].RelevanceScore {
				rerankedDocs[j], rerankedDocs[j+1] = rerankedDocs[j+1], rerankedDocs[j]
			}
		}
	}

	// 模拟重排序可能会微调分数
	for i, doc := range rerankedDocs {
		doc.RelevanceScore = doc.RelevanceScore * (1.0 - float32(i)*0.01) // 略微降低后续文档的分数
	}

	r.log.WithContext(ctx).Infof("Documents reranked successfully")
	return rerankedDocs, nil
}

// AssembleAnswer calls assembler service to generate answer
func (r *queryRepo) AssembleAnswer(ctx context.Context, query string, documents []*biz.RelatedDocument) (string, error) {
	r.log.WithContext(ctx).Infof("Assembling answer for query: %s", query)

	// TODO: 调用 assembler 服务生成答案
	// 这里是模拟实现，实际应该通过 gRPC 调用 assembler 服务

	if len(documents) == 0 {
		return "抱歉，没有找到相关的文档信息。", nil
	}

	// 模拟生成答案：基于文档内容生成简单的回答
	answer := fmt.Sprintf("根据相关文档，关于「%s」的信息如下：\n\n", query)

	for i, doc := range documents {
		if i >= 3 { // 最多使用前3个文档
			break
		}
		answer += fmt.Sprintf("%d. %s：%s\n\n", i+1, doc.Title, doc.Snippet)
	}

	answer += "以上信息来自相关文档，如需更详细信息，请查看具体文档。"

	r.log.WithContext(ctx).Info("Answer assembled successfully")
	return answer, nil
}

// SaveQueryHistory saves query history
func (r *queryRepo) SaveQueryHistory(ctx context.Context, userID, query, answer string, metadata *biz.QueryMetadata) error {
	r.log.WithContext(ctx).Infof("Saving query history for user: %s", userID)

	// TODO: 实现查询历史保存逻辑
	// 这里是示例实现，实际应该保存到数据库

	r.log.WithContext(ctx).Infof("Query history saved: user=%s, query=%s", userID, query)
	return nil
}

// GetQuerySuggestions gets query suggestions
func (r *queryRepo) GetQuerySuggestions(ctx context.Context, query string) ([]string, error) {
	r.log.WithContext(ctx).Infof("Getting suggestions for query: %s", query)

	// TODO: 实现查询建议逻辑
	// 这里是模拟实现，实际可以基于历史查询、热门查询等生成建议

	// 模拟一些查询建议
	suggestions := []string{
		query + " 详细介绍",
		query + " 应用场景",
		query + " 最佳实践",
		"如何学习 " + query,
		query + " 相关工具",
	}

	r.log.WithContext(ctx).Infof("Generated %d suggestions", len(suggestions))
	return suggestions, nil
}
